--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -4,12 +4,12 @@ on:
   pull_request:
   push:
     branches:
-      - prod
+      - main
 
 jobs:
   nix-check:
     name: Check
-    runs-on: codeberg-small
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
